# docs/swagger.json
@@ -9,6 +9,45 @@
     "host": "localhost:8080",
     "basePath": "/api/v1/auth",
     "paths": {
+        "/check-email": {
+            "get": {
+                "description": "Fetches a user from Cognito by email. Primarily for testing purposes.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user by email",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User email",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.CheckEmailResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/invites/{inviteId}/accept": {
             "get": {
                 "description": "Marks an invite as accepted.",
@@ -35,25 +74,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.AcceptInviteResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AcceptInviteResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.AcceptInviteResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AcceptInviteResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.AcceptInviteResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AcceptInviteResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/dto.AcceptInviteResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AcceptInviteResponse"
                         }
                     }
                 }
@@ -85,25 +124,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.AttachRoleResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AttachRoleResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.AttachRoleResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AttachRoleResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.AttachRoleResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AttachRoleResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/dto.AttachRoleResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.AttachRoleResponse"
                         }
                     }
                 }
@@ -141,7 +180,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateInviteRequest"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.CreateInviteRequest"
                         }
                     }
                 ],
@@ -149,7 +188,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.InviteResponse"
+                            "$ref": "#/definitions/nrs-authentication_internal_dto.InviteResponse"
                         }
                     },
                     "400": {
@@ -216,7 +255,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.InviteResponse"
+                                "$ref": "#/definitions/nrs-authentication_internal_dto.InviteResponse"
                             }
                         }
                     },
@@ -277,7 +316,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.UserOrganizationMappingResponse"
+                                "$ref": "#/definitions/nrs-authentication_internal_dto.UserOrganizationMappingResponse"
                             }
                         }
                     },
@@ -338,7 +377,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.UserOrganizationMappingResponse"
+                                "$ref": "#/definitions/nrs-authentication_internal_dto.UserOrganizationMappingResponse"
                             }
                         }
                     },
@@ -368,7 +407,7 @@
         }
     },
     "definitions": {
-        "dto.AcceptInviteResponse": {
+        "nrs-authentication_internal_dto.AcceptInviteResponse": {
             "type": "object",
             "properties": {
                 "invite": {},
@@ -380,7 +419,7 @@
                 }
             }
         },
-        "dto.AttachRoleResponse": {
+        "nrs-authentication_internal_dto.AttachRoleResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -391,7 +430,67 @@
                 }
             }
         },
-        "dto.CreateInviteRequest": {
+        "nrs-authentication_internal_dto.AttributeTypeSwagger": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "nrs-authentication_internal_dto.CheckEmailResponse": {
+            "type": "object",
+            "properties": {
+                "paginationToken": {
+                    "type": "string"
+                },
+                "resultMetadata": {
+                    "$ref": "#/definitions/nrs-authentication_internal_dto.MetadataSwagger"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/nrs-authentication_internal_dto.CheckEmailUserDTO"
+                    }
+                }
+            }
+        },
+        "nrs-authentication_internal_dto.CheckEmailUserDTO": {
+            "type": "object",
+            "properties": {
+                "attributes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/nrs-authentication_internal_dto.AttributeTypeSwagger"
+                    }
+                },
+                "enabled": {
+                    "type": "boolean"
+                },
+                "mfaOptions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/nrs-authentication_internal_dto.MFAOptionTypeSwagger"
+                    }
+                },
+                "userCreateDate": {
+                    "type": "string"
+                },
+                "userLastModifiedDate": {
+                    "type": "string"
+                },
+                "userStatus": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "nrs-authentication_internal_dto.CreateInviteRequest": {
             "type": "object",
             "required": [
                 "organizationId",
@@ -420,7 +519,7 @@
                 }
             }
         },
-        "dto.InviteResponse": {
+        "nrs-authentication_internal_dto.InviteResponse": {
             "type": "object",
             "properties": {
                 "accepted": {
@@ -452,7 +551,21 @@
                 }
             }
         },
-        "dto.UserOrganizationMappingResponse": {
+        "nrs-authentication_internal_dto.MFAOptionTypeSwagger": {
+            "type": "object",
+            "properties": {
+                "attributeName": {
+                    "type": "string"
+                },
+                "deliveryMedium": {
+                    "type": "string"
+                }
+            }
+        },
+        "nrs-authentication_internal_dto.MetadataSwagger": {
+            "type": "object"
+        },
+        "nrs-authentication_internal_dto.UserOrganizationMappingResponse": {
             "type": "object",
             "properties": {
                 "active": {
